<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">MemosM</string>
    <string name="login_title">Login to Memos</string>
    <string name="login_token">Token</string>
    <string name="login_password">Password</string>
    <string name="login_username">Username</string>
    <string name="login_host_url">Host URL</string>
    <string name="login_host_url_placeholder" translatable="false">https://demo.usememos.com</string>
    <string name="login_error_empty_host">Host URL cannot be empty</string>
    <string name="login_error_failed">Login failed. Please try again.</string>
    <string name="login_button">Login</string>

    <string name="nav_memos">Memos</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_attachments">Attachments</string>
    <string name="nav_profile">Profile</string>

    <string name="profile_user_info_not_available">User information not available</string>
    <string name="profile_retry">Retry</string>
    <string name="profile_avatar_description">Avatar</string>
    <string name="profile_user_id">User ID</string>
    <string name="profile_statistics">Statistics</string>
...
    <string name="profile_about_repo">Source Code</string>
    <string name="profile_about_repo_url" translatable="false">https://github.com/yamada-sexta/memos-m</string>
    <string name="profile_about_issues">Report an Issue</string>
    <string name="profile_about_issues_url" translatable="false">https://github.com/yamada-sexta/memos-m/issues</string>
    <string name="profile_about_licenses">Open Source Licenses</string>
    <string name="profile_add_account">Add Account</string>
    <string name="profile_accounts">Accounts</string>
    <string name="profile_remove_account_title">Remove Account</string>
    <string name="profile_remove_account_confirm">Are you sure you want to remove the account for \"%1$s\"? You will need to login again to access this account.</string>
    <string name="profile_edit_account">Edit Profile</string>
    <string name="profile_username">Username</string>
    <string name="profile_display_name">Display Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_avatar_url">Avatar URL</string>
    <string name="profile_description">Description</string>
    <string name="profile_new_password">New Password</string>
    <string name="profile_password_hint">Leave blank to keep current password</string>
    <string name="profile_edit_credentials">Edit Login Info</string>
    <string name="profile_credential_hint">Changes saved locally. Use carefully – invalid credentials will require re-login.</string>

    <string name="memo_action_edit">Edit</string>
    <string name="memo_action_archive">Archive</string>
    <string name="memo_action_unarchive">Unarchive</string>
    <string name="memo_action_pin">Pin</string>
...

    <string name="memo_detail_title">Memo Details</string>
    <string name="memo_detail_comments">Comments (%1$d)</string>
    <string name="memo_detail_no_comments">No comments yet</string>
    <string name="memo_detail_add_comment">Add Comment</string>
    <string name="memo_detail_comment_placeholder">Write your comment here…</string>
    <string name="memo_detail_back">Back</string>
    <string name="memo_detail_placeholder">Select a memo to view details</string>

    <string name="memo_visibility_public">Public</string>
    <string name="memo_visibility_protected">Protected</string>
    <string name="memo_visibility_private">Private</string>
    <string name="memo_visibility_unspecified">Unknown</string>

    <string name="common_save">Save</string>
    <string name="common_share">Share</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_close">Close</string>
    <string name="common_not_available">N/A</string>
    <string name="common_remove">Remove</string>
    <string name="common_delete">Delete</string>
...
